--- a/examen.html
+++ b/examen.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div align="center">
-    <img src="./img/logo.jpeg" alt="Logo del restaurante" height="300">
+        <img src="./img/logo.jpeg" alt="Logo del restaurante" height="300">
     </div>
     <div class="direccion">
-        <h2>RESTAURANTE CIPFP MISLATA</h2>
+        <h2>Restaurante CIPFP Mislata</h2>
         <p>
-            Dolores Ibarruri, 32
+            <a href="https://g.page/CIPFPMislata?share" target="blank">Dolores Ibarruri 32</a>
         </p>
         <p>
             46920 Mislata
         </p>
         <p>
-            Teléfono para reservas: <span>961 205 925</span>
+            Teléfono para reservas: <span id="telefono">961 205 925</span>
         </p>
     </div>
     <div>
@@ -29,13 +29,11 @@
         <ul>
             <li>Crema de calabaza</li>
             <li>Ensalada templada de champiñones</li>
-            <li>Lentejas con chorizo</li>
         </ul>
         <p class="menu">
             Segundos
         </p>
         <ul>
-            <li>Pechuga de pollo a la plancha</li>
             <li>Solomillo de cerdo asado con salsa de mostaza y miel</li>
             <li>Pez espada al horno con cous cous</li>
         </ul>
@@ -44,16 +42,14 @@
         </p>
         <ul>
             <li>Vasito de brownie</li>
-            <li>Helados</li>
             <li>Fruta de temporada</li>
         </ul>
         <p class="menu">
             Bebida
         </p>
         <ul>
-            <li>Refrescos</li>
+            <li>Refrescos o agua</li>
             <li>Vino de la casa o cerveza</li>
-            <li>Agua</li>
         </ul>
     </div>
     <div>
