--- a/examen.html
+++ b/examen.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <div align="center">
+    <div>
         <img src="./img/logo.jpeg" alt="Logo del restaurante" height="300">
     </div>
     <div class="direccion">
@@ -59,11 +59,11 @@
                     <td colspan="3">Precios</td>
                 </tr>
             </thead>
-            <tbody align="center">
+            <tbody>
                 <tr>
-                    <td width="300">Plato único (con postre)</td>
-                    <td width="300">Menú completo (postre o café)</td>
-                    <td width="300">Menú completo (postre y café)</td>
+                    <td>Plato único (con postre)</td>
+                    <td>Menú completo (postre o café)</td>
+                    <td>Menú completo (postre y café)</td>
                 </tr>
                 <tr>
                     <td>6€</td>
